<resources>
    <string name="app_name">Calculator</string>
    <!-- 계산기 버튼에 사용될 텍스트 -->
    <string name="AC">AC</string>
    <string name="P_M">+/-</string>
    <string name="Percent">%</string>
    <string name="Divison">/</string>
    <string name="Plus">+</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Multiplication">X</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Minus">-</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Zero">0</string>
    <string name="Equals">=</string>
    <string name="Colon">.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>