<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".calculatorFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:orientation="vertical"
        android:background="@color/black">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="bottom"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:weightSum="5">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/AC_btn"
                    style="@style/button"
                    android:text="@string/AC" />

                <Button
                    android:id="@+id/P_M_btn"
                    style="@style/button"
                    android:text="@string/P_M" />

                <Button
                    android:id="@+id/percent"
                    style="@style/button"
                    android:text="@string/Percent" />

                <Button
                    android:id="@+id/Dvison_btn"
                    style="@style/button"
                    android:text="@string/Divison" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/Seven_btn"
                    style="@style/button"
                    android:text="@string/Seven" />

                <Button
                    android:id="@+id/Eight_btn"
                    style="@style/button"
                    android:text="@string/Eight" />

                <Button
                    android:id="@+id/Nine_btn"
                    style="@style/button"
                    android:text="@string/Nine" />

                <Button
                    android:id="@+id/Multiplicaton"
                    style="@style/button"
                    android:text="@string/Multiplication" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/Four_btn"
                    style="@style/button"
                    android:text="@string/Four" />

                <Button
                    android:id="@+id/Five_btn"
                    style="@style/button"
                    android:text="@string/Five" />

                <Button
                    android:id="@+id/Six_btn"
                    style="@style/button"
                    android:text="@string/Six" />

                <Button
                    android:id="@+id/Minus_btn"
                    style="@style/button"
                    android:text="@string/Minus" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">


                <Button
                    android:id="@+id/One_btn"
                    style="@style/button"
                    android:text="@string/One" />

                <Button
                    android:id="@+id/Two_btn"
                    style="@style/button"
                    android:text="@string/Two" />

                <Button
                    android:id="@+id/Three_btn"
                    style="@style/button"
                    android:text="@string/Three" />

                <Button
                    android:id="@+id/Plus_btn"
                    style="@style/button"
                    android:text="@string/Plus" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/Zero_btn"
                    style="@style/button"
                    android:layout_span="2"
                    android:gravity="left"
                    android:text="@string/Zero" />

                <Button
                    android:id="@+id/Colon"
                    style="@style/button"
                    android:text="@string/Colon" />

                <Button
                    android:id="@+id/Equals"
                    style="@style/button"
                    android:text="@string/Equals" />

            </TableRow>
        </TableLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>